# mic-passthrough

./: pyproject.toml  receiver.py  sender.py
mic_passthrough/: __main__.py  discovery.py  mac_app.py  pc_app.py  receiver.py  sender.py
