[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mic-passthrough"
version = "1.0.0"
description = "Stream Mac mic to PC over LAN for Moonlight game streaming"
requires-python = ">=3.9"
dependencies = [
    "sounddevice",
    "numpy",
    "rumps; sys_platform == 'darwin'",
    "psutil; sys_platform == 'darwin'",
    "pystray; sys_platform == 'win32'",
    "pillow; sys_platform == 'win32'",
    "psutil; sys_platform == 'win32'",
]

[project.scripts]
mic-passthrough = "mic_passthrough.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mic_passthrough*"]
